--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=3000
+
+MONGODB_CNN=mongodb+srv://facuabarca2:V9DxyvAlNb8opRsZ@myclustercafe.sgj5u.mongodb.net/cafeDB
+USER=facuabarca2
+PASS=V9DxyvAlNb8opRsZ
